--- a/oxford/index.css
+++ b/oxford/index.css
@@ -37,7 +37,7 @@ nav {
 }
 .btn-secondary {
   font-size: 18px;
-  color: #fff;
+  color: #c4c7cd;
   background-color: #002147;
   border-color: #002147;
   font-family: "PT Sans", "Helvetica Neue", Arial, Helvetica, sans-serif;
